--- a/Introduccion.html
+++ b/Introduccion.html
@@ -26,16 +26,16 @@ su facilidad de aprendizaje.
           #Comentario
           #Utilizando operador % para emplear sustitución
           var = "%s %s" % ('hola!' , 'saludos')
-          print('valor de var:', var)
+          print('valor de var utilizando %:', var)
 
           #Utilizando funcion format
           var = "{0} {1}".format('hola!' , 'saludos')
-          print('valor de var:', var)
+          print('valor de var utilizando .format:', var)
 
       </code>
       <code data-type="solution"></code>
       <code data-type="sct"></code>
-      <div data-type="hint">Presiones 'Run'.</div>
+      <div data-type="hint">Presione 'Run'.</div>
     </div>
   </div>
 </body>
