--- a/Introduccion.html
+++ b/Introduccion.html
@@ -30,7 +30,7 @@ su facilidad de aprendizaje.
 
           #Utilizando funcion format
           var = "{0} {1}".format('hola!' , 'saludos')
-          print('valor de var utilizando .format:', var)
+          print('valor de var utilizando .format():', var)
 
       </code>
       <code data-type="solution"></code>
