--- a/Introduccion.html
+++ b/Introduccion.html
@@ -31,6 +31,7 @@ su facilidad de aprendizaje.
           #Utilizando funcion format
           var = "{0} {1}".format('hola!' , 'saludos')
           print('valor de var utilizando .format():', var)
+          print()
 
       </code>
       <code data-type="solution"></code>
