--- a/Introduccion.html
+++ b/Introduccion.html
@@ -17,7 +17,31 @@ Como lenguaje de alto nivel y de propósito general, Python es un lenguaje inter
 su facilidad de aprendizaje.
 <div class="exercise">
     <div class="title">
-      <h2>Novedades en Python 3</h2>
+      <h2>Hola Mundo</h2>
+    </div>
+
+    <div data-datacamp-exercise data-lang="python" data-height="auto">
+      <code data-type="pre-exercise-code"></code>
+      <code data-type="sample-code">
+          #Comentario
+          print('Hola Mundo')  #Otro Comentario
+
+          print('Hola')
+          print('Mundo!')
+
+          #Modificando comportamiento
+          print("Saludos!", end=" ")
+          print('Adios')
+      </code>
+      <code data-type="solution"></code>
+      <code data-type="sct"></code>
+      <div data-type="hint">Presione 'Run'.</div>
+    </div>
+  </div>
+
+<div class="exercise">
+    <div class="title">
+      <h2>Formato de cadenas de caracteres</h2>
     </div>
 
     <div data-datacamp-exercise data-lang="python" data-height="auto">
