--- a/Introduccion.html
+++ b/Introduccion.html
@@ -38,7 +38,23 @@ su facilidad de aprendizaje.
       <div data-type="hint">Presione 'Run'.</div>
     </div>
   </div>
+<div class="exercise">
+    <div class="title">
+      <h2>Mas mensajes</h2>
+    </div>
 
+    <div data-datacamp-exercise data-lang="python" data-height="auto">
+      <code data-type="pre-exercise-code"></code>
+      <code data-type="sample-code">
+          #Comentario
+          print('Hoy es:'); print('lunes')
+
+      </code>
+      <code data-type="solution"></code>
+      <code data-type="sct"></code>
+      <div data-type="hint">Presione 'Run'.</div>
+    </div>
+  </div>
 <div class="exercise">
     <div class="title">
       <h2>Formato de cadenas de caracteres</h2>
