--- a/trash/Pandas caso de uso/Pandas_Caso_de_Uso_Mi_Contabilidad.html
+++ b/trash/Pandas caso de uso/Pandas_Caso_de_Uso_Mi_Contabilidad.html
@@ -9920,7 +9920,7 @@ div.output_wrapper {
   align-items: stretch;
   z-index: 1;
 }
-/* class for the output area when it should be height-limited */
+/* class for the arqui_recipe area when it should be height-limited */
 div.output_scroll {
   /* ideally, this would be max-height, but FF barfs all over that */
   height: 24em;
@@ -9932,7 +9932,7 @@ div.output_scroll {
   box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.8);
   display: block;
 }
-/* output div while it is collapsed */
+/* arqui_recipe div while it is collapsed */
 div.output_collapsed {
   margin: 0px;
   padding: 0px;
@@ -9966,7 +9966,7 @@ div.out_prompt_overlay:hover {
 div.output_prompt {
   color: #D84315;
 }
-/* This class is the outer container of all output sections. */
+/* This class is the outer container of all arqui_recipe sections. */
 div.output_area {
   padding: 0px;
   page-break-inside: avoid;
@@ -10050,7 +10050,7 @@ div.output_area pre {
   background-color: transparent;
   border-radius: 0;
 }
-/* This class is for the output subarea inside the output_area and after
+/* This class is for the arqui_recipe subarea inside the output_area and after
    the prompt div. */
 div.output_subarea {
   overflow-x: auto;
@@ -10067,8 +10067,8 @@ div.output_scroll div.output_subarea {
   overflow-x: visible;
 }
 /* The rest of the output_* classes are for special styling of the different
-   output types */
-/* all text output has this class: */
+   arqui_recipe types */
+/* all text arqui_recipe has this class: */
 div.output_text {
   text-align: left;
   color: #000;
@@ -10462,7 +10462,7 @@ pre.dialog {
 p.dialog {
   padding: 0.2em;
 }
-/* Word-wrap output correctly.  This is the CSS3 spelling, though Firefox seems
+/* Word-wrap arqui_recipe correctly.  This is the CSS3 spelling, though Firefox seems
    to not honor it correctly.  Webkit browsers (Chrome, rekonq, Safari) do.
  */
 pre,
